--- a/resume.qmd
+++ b/resume.qmd
@@ -1,86 +1,41 @@
 ---
-layout: cv
-title: Isaac Newtons's CV
+layout: resume
+title: Zane Rowbotham's Resume
 ---
-# Isaac Newton
-Physicist, Mathematician, Cambridge professor.
+# Zane Rowbotham
+Accounting student studying at Brigham Young University-Idaho.
 
 <div id="webaddress">
-<a href="isaac@applesdofall.org">isaac@applesdofall.org</a>
-| <a href="http://en.wikipedia.org/wiki/Isaac_Newton">My wikipedia page</a>
+<a href="datascience@byui.edu">datascience@byui.edu</a>
+| <a href="https://byuidatascience.github.io/development.html">Data Science Program</a>
 </div>
 
-
-## Currently
-
-Standing on the shoulders of giants
-
-### Specialized in
-
-Laws of motion, gravitation, minting coins, disliking [Robert Hooke](http://en.wikipedia.org/wiki/Robert_Hooke)
-
-
-### Research interests
-
-Cooling, power series, optics, alchemy, planetary motions, apples.
+<!-- https://www.monique.tech/the-art-of-markdown -->
 
 
 ## Education
 
-`1654-1660`
-__The King's School, Grantham.__
+`2020-2024`
+__Brigham Young University-Idaho__, Rexburg, ID
 
-`June 1661 - now`
-__Trinity College, Cambridge__
-
-- Sizar
-
-`1667 - death`
-__Trinity College, Cambridge__
-
-- Fellow
+- Major:Accounting(B.S.)
+- 3.7 GPA 
 
 
+### Internships
 
-## Awards
+`January 2024 - Current`
+__FORVIS, LLP__, Rexburg, ID
 
-`2012`
-President, *Royal Society*, London, UK
-
-Associate, *French Academy of Science*, Paris, France
-
-
-
-## Publications
-
-<!-- A list is also available [online](http://scholar.google.co.uk/citations?user=LTOTl0YAAAAJ) -->
-
-### Journals
-
-`1669`
-Newton Sir I, De analysi per æquationes numero terminorum infinitas. 
-
-`1669`
-Lectiones opticæ.
-
-etc. etc. etc.
-
-### Patents
-
-`2012`
-Infinitesimal calculus for solutions to physics problems, [SMBC](http://www.techdirt.com/articles/20121011/09312820678/if-patents-had-been-around-time-newton.shtml) patent 001
+- Assisted engagement with portions of audit, review, and compilation engagements
+- Provide timely feedback and progress updates for all work in process
+- Handle multiple tasks using Caseware software and Excel
 
 
-## Occupation
+## Service History
 
-`1600`
-__Royal Mint__, London
-
-- Warden
-- Minted coins
-
-`1600`
-__Lucasian professor of Mathematics__, Cambridge University
+`2018-2020`
+__Service Missionary__, Edmonton, Canada
 
 
 
